--- a/pom.xml
+++ b/pom.xml
@@ -10,17 +10,30 @@
   <organization>
     <name>Descom Consulting Ltd.</name>
   </organization>
+  <scm>
+    <connection>scm:git:https://remigius_stalder@bitbucket.org/remigius_stalder/webapp-hello-java.git</connection>
+    <developerConnection>scm:git:https://remigius_stalder@bitbucket.org/remigius_stalder/webapp-hello-java.git</developerConnection>
+    <url>https://bitbucket.org/remigius_stalder/webapp-hello-java</url>
+  </scm>
 
   <properties>
+    <maven.build.timestamp.format>yyyy-MM-dd HH:mm:ss.SSS</maven.build.timestamp.format>
     <junit.version>4.12</junit.version>
     <servlet.api.version>3.1.0</servlet.api.version>
     <war.version>3.0.0</war.version>
     <addMavenDescriptor>false</addMavenDescriptor>
     <projectRoot>.</projectRoot>
+    <buildTime>${maven.build.timestamp}</buildTime>
   </properties>
 
   <build>
     <finalName>demo</finalName>
+    <resources>
+      <resource>
+        <directory>src/main/resources</directory>
+        <filtering>true</filtering>
+      </resource>
+    </resources>
     <plugins>
       <plugin>
         <groupId>org.apache.maven.plugins</groupId>
@@ -31,6 +44,29 @@
           <target>1.8</target>
           <testSource>1.8</testSource>
           <testTarget>1.8</testTarget>
+        </configuration>
+      </plugin>
+      <plugin>
+        <groupId>org.codehaus.mojo</groupId>
+        <artifactId>buildnumber-maven-plugin</artifactId>
+        <version>1.4</version>
+        <executions>
+          <execution>
+            <phase>validate</phase>
+            <goals>
+              <goal>create</goal>
+            </goals>
+          </execution>
+        </executions>
+        <configuration>
+          <!--
+          see also https://stackoverflow.com/questions/18134627/how-much-of-a-git-sha-is-generally-considered-necessary-to-uniquely-identify-a
+          -->
+          <shortRevisionLength>7</shortRevisionLength>
+          <format>{0}</format>
+          <items>
+            <item>scmVersion</item>
+          </items>
         </configuration>
       </plugin>
       <plugin>
@@ -50,7 +86,7 @@
               <Specification-Version>${project.version}</Specification-Version>
               <Specification-Vendor>Descom Consulting Ltd.</Specification-Vendor>
               <Implementation-Title>${project.name}</Implementation-Title>
-              <Implementation-Version>${project.version}</Implementation-Version>
+              <Implementation-Version>${project.version}-${buildNumber}</Implementation-Version>
               <Implementation-Vendor>Descom Consulting Ltd.</Implementation-Vendor>
               <Build-Date>${maven.build.timestamp}</Build-Date>
               <Build-Maven>${project.groupId}:${project.artifactId}:${project.version}</Build-Maven>
