--- a/webapp/docker/Dockerfile
+++ b/webapp/docker/Dockerfile
@@ -3,6 +3,6 @@ FROM tomcat:alpine
 
 RUN rm -rf $CATALINA_HOME/webapps
 
-ADD ROOT.war $CATALINA_HOME/webapps/ROOT.war
+ADD webapp-1.0-SNAPSHOT.war $CATALINA_HOME/webapps/ROOT.war
 
 CMD ["catalina.sh", "run"]
