--- a/webapp/src/main/webapp/WEB-INF/web.xml
+++ b/webapp/src/main/webapp/WEB-INF/web.xml
@@ -4,12 +4,14 @@
          metadata-complete="true">
   <servlet>
     <servlet-name>HelloServlet</servlet-name>
-    <servlet-class>biz.descom.webapphellojava.HelloServlet</servlet-class>
+    <servlet-class>biz.descom.hellojava.webapp.HelloServlet</servlet-class>
   </servlet>
   <servlet-mapping>
     <servlet-name>HelloServlet</servlet-name>
     <url-pattern>/index</url-pattern>
     <url-pattern>/kill</url-pattern>
+    <url-pattern>/sick</url-pattern>
+    <url-pattern>/health</url-pattern>
   </servlet-mapping>
   <welcome-file-list>
     <welcome-file>index</welcome-file>
